V0.5.7 (#38)
* fix: rpc invalid switch configuration

* feat: add mix resource support

* feat: add mix resource testcast

* fix: uncheck resource invalid

* feat: upgrade grpc-gate to v2; add websocket message subscribe

* fix: fixed issue with empty path of input resource

* fix: add websocket subscribe auth token validator
