# module/resource/provider/keys.go
@@ -1,7 +1,10 @@
 package provider
 
 import (
+	kptypes "github.com/bytelang/kplayer/types"
+	"github.com/bytelang/kplayer/types/config"
 	moduletypes "github.com/bytelang/kplayer/types/module"
+	"github.com/bytelang/kplayer/types/server"
 	"sync"
 )
 
@@ -13,6 +16,7 @@ const (
 	CannotRemoveCurrentResource ResourceError = "can not remove playing resource"
 	ResourceNotFound            ResourceError = "resource not found"
 	ResourceUniqueHasExisted    ResourceError = "resource unique name has existed"
+	ResourcePathCanNotBeEmpty   ResourceError = "resource path can not be empty"
 )
 
 type ResourceError string
@@ -79,6 +83,92 @@ func (rs *Resources) AppendResource(resource moduletypes.Resource) error {
 		return ResourceUniqueHasExisted
 	}
 
+	if len(resource.Path) == 0 {
+		return ResourcePathCanNotBeEmpty
+	}
+
 	rs.resources = append(rs.resources, resource)
 	return nil
+}
+
+// CalcMixResourceGroupPrimaryPath
+// Under mixed resources, gets which resource should be selected as the primary resource
+func CalcMixResourceGroupPrimaryPath(groups []*moduletypes.MixResourceGroup) (firstVideoResourceGroup *moduletypes.MixResourceGroup, firstAudioResourceGroup *moduletypes.MixResourceGroup, primaryResourceGroup *moduletypes.MixResourceGroup) {
+	var firstVideoResource *moduletypes.MixResourceGroup = nil
+	var firstAudioResource *moduletypes.MixResourceGroup = nil
+	for _, groupItem := range groups {
+		if groupItem.MediaType == moduletypes.ResourceMediaType_video && firstVideoResource == nil {
+			firstVideoResource = groupItem
+		}
+		if groupItem.MediaType == moduletypes.ResourceMediaType_audio && firstAudioResource == nil {
+			firstAudioResource = groupItem
+		}
+
+		// add groups
+		mediaType := moduletypes.ResourceMediaType_video
+		if groupItem.MediaType == moduletypes.ResourceMediaType_audio {
+			mediaType = moduletypes.ResourceMediaType_audio
+		}
+		groups = append(groups, &moduletypes.MixResourceGroup{
+			Path:           groupItem.Path,
+			MediaType:      mediaType,
+			PersistentLoop: groupItem.PersistentLoop,
+		})
+	}
+
+	// calc primary resource
+	var primaryResource *moduletypes.MixResourceGroup = firstVideoResource
+	if primaryResource.PersistentLoop && !firstAudioResource.PersistentLoop {
+		primaryResource = firstAudioResource
+	}
+
+	return firstVideoResource, firstAudioResource, primaryResource
+}
+
+func TransferConfigToModuleResourceGroup(configResourceGroups []*config.MixResourceGroup) []*moduletypes.MixResourceGroup {
+	var groups []*moduletypes.MixResourceGroup
+
+	for _, item := range configResourceGroups {
+		mediaType := moduletypes.ResourceMediaType_video
+		if item.MediaType == config.ResourceMediaType_audio {
+			mediaType = moduletypes.ResourceMediaType_audio
+		}
+		group := &moduletypes.MixResourceGroup{
+			Path:           item.Path,
+			MediaType:      mediaType,
+			PersistentLoop: item.PersistentLoop,
+		}
+
+		groups = append(groups, group)
+	}
+
+	return groups
+}
+
+func TransferServerToModuleResourceGroup(serverResourceGroups []*server.MixResourceGroup) []*moduletypes.MixResourceGroup {
+	var groups []*moduletypes.MixResourceGroup
+
+	for _, item := range serverResourceGroups {
+		mediaType := moduletypes.ResourceMediaType_video
+		if item.MediaType == server.ResourceMediaType_audio {
+			mediaType = moduletypes.ResourceMediaType_audio
+		}
+		group := &moduletypes.MixResourceGroup{
+			Path:           item.Path,
+			MediaType:      mediaType,
+			PersistentLoop: item.PersistentLoop,
+		}
+
+		groups = append(groups, group)
+	}
+
+	return groups
+}
+
+func GetResourceUniqueName(uniqueName string, path string, append ...string) string {
+	if len(uniqueName) != 0 {
+		return uniqueName
+	}
+
+	return kptypes.GetUniqueString(path, append...)
 }
